syntax = "proto3";

package cluster;
import "github.com/appcelerator/amp/data/clusters/clusters.proto";

service Cluster {
  rpc Create (CreateRequest) returns (CreateReply);
  rpc List (ListRequest) returns (ListReply);
  rpc Status (StatusRequest) returns (StatusReply);
  rpc Update (UpdateRequest) returns (UpdateReply);
  rpc Remove (RemoveRequest) returns (RemoveReply);
  rpc NodeList (NodeListRequest) returns (NodeListReply);
}

message CreateRequest {
  string name = 1;
  clusters.CloudProvider provider = 2;
  string organization_name = 3;
  string keypair_name = 4;
  int64 volume_size = 5;
  int64 manager_count = 6;
  int64 worker_count = 7;
  repeated string registry_mirror = 8;
}

message CreateReply {
    string id = 1;
}


message ListRequest {}

message ListReply {}

message StatusRequest {
  string id = 1;
}

message StatusReply {
  string id = 1;
}

message UpdateRequest {
    string id = 1;
}

message UpdateReply {
    string id = 1;
}

message RemoveRequest {
  string id = 1;
}

message RemoveReply {
  string id = 1;
}

message NodeListRequest {}

message NodeListReply {
  repeated NodeReply nodes = 1;
}

message NodeReply {
  string id = 1;
  string hostname = 2;
  string status = 3;
  string availability = 4;
  string role = 5;
  bool manager_leader = 6;
  string docker_version = 7;
  string keypair_name = 8;
  map<string, string> engine_labels = 9;
  map<string, string> node_labels = 10;
}
